--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,6 @@ body {
   text-align: center;
   border-radius: 10px;
 }
-
 #toTop a {
   font-size: 2rem;
   text-decoration: none;
@@ -56,7 +55,6 @@ body {
   top: 30px;
   z-index: 1000;
 }
-
 @media screen and (max-width: 768px) {
   .nav {
     height: auto;
@@ -69,7 +67,6 @@ body {
 .nav .icon {
   display: none;
 }
-
 @media screen and (max-width: 768px) {
   .nav .icon {
     display: block;
@@ -77,7 +74,6 @@ body {
     left: 30px;
     top: 55px;
   }
-
   .nav .icon i {
     color: black;
     font-size: 2rem;
@@ -91,7 +87,6 @@ body {
   height: 95px;
   width: 95px;
 }
-
 .nav__enlaces {
   align-items: center;
   display: flex;
@@ -100,7 +95,6 @@ body {
   justify-content: space-around;
   max-width: 400px;
 }
-
 @media screen and (max-width: 768px) {
   .nav__enlaces {
     opacity: 0;
@@ -115,7 +109,6 @@ body {
   opacity: 1;
   visibility: visible;
 }
-
 .nav__enlaces__boton {
   padding: 0 15px;
   background-color: rgba(226, 226, 226, 0.25);
@@ -131,7 +124,6 @@ body {
   box-shadow: 2px 2px 5px rgba(0, 36, 108, 0.3);
   border-radius: 10px 0px;
 }
-
 @media screen and (max-width: 768px) {
   .nav__enlaces__boton {
     padding: 0 5px;
@@ -142,12 +134,10 @@ body {
   transform: scale(1.05);
   background-color: rgba(226, 226, 226, 0.5);
 }
-
 .nav__enlaces__boton:active {
   transition: transform ease 100ms;
   transform: scale(0.98);
 }
-
 .nav--oscura {
   border-bottom: 3px solid black;
 }
@@ -163,7 +153,6 @@ img {
   position: relative;
   margin-bottom: 40px;
 }
-
 .header__fecha {
   bottom: 0;
   height: auto;
@@ -172,12 +161,12 @@ img {
   right: 0;
   width: 100%;
 }
-
 @media screen and (max-width: 768px) {
   .header__fecha {
     max-width: 65%;
   }
 }
+
 .symbol-target {
   padding-top: 100px;
   margin-top: -100px;
@@ -194,7 +183,6 @@ img {
   grid-auto-rows: 300px;
   row-gap: 40px;
 }
-
 @media screen and (max-width: 768px) {
   .main {
     max-width: 1000px;
@@ -203,11 +191,9 @@ img {
     row-gap: 0px;
     grid-auto-rows: 200px;
   }
-
   .main .main__icono--reto {
     grid-row: 3/4;
   }
-
   .main .main__icono--comparte {
     grid-row: 7/8;
   }
@@ -216,14 +202,12 @@ img {
   grid-column: 1/-1;
   text-align: center;
 }
-
 .main__apuntate p {
   font-family: Oswald;
   color: #00246c;
   font-size: 4rem;
   margin-bottom: 40px;
 }
-
 @media screen and (max-width: 768px) {
   .main__apuntate p {
     font-size: 3rem;
@@ -240,17 +224,14 @@ img {
   margin: 0 auto;
   display: block;
 }
-
 .main__apuntate a:hover {
   transition: all ease 300ms;
   transform: scale(1.05);
 }
-
 .main__apuntate a:active {
   transition: all linear 50ms;
   transform: scale(0.98);
 }
-
 .main__texto {
   color: #00246c;
   font-family: Oswald;
@@ -258,45 +239,36 @@ img {
   text-align: center;
   font-size: 1.5rem;
 }
-
 .main__texto h3 {
   font-weight: 700;
   margin-bottom: 40px;
 }
-
 .main__icono {
   background-repeat: no-repeat;
   background-position: center center;
   background-size: contain;
 }
-
 .main__icono--reto {
   background-image: url(../img/reto.webp);
 }
-
 .main__icono--aprende {
   background-image: url(../img/aprende.webp);
 }
-
 .main__icono--comparte {
   background-image: url(../img/comparte.png);
 }
-
 .main__icono--premio {
   background-image: url(../img/premio.webp);
 }
-
 .main__almuerzo, .main__organiza {
   background-repeat: no-repeat;
   background-position: center center;
   background-size: contain;
   grid-column: 1/-1;
 }
-
 .main__almuerzo {
   background-image: url(../img/almuerzo.png);
 }
-
 .main__organiza {
   background-image: url(../img/organiza.png);
   background-position: center center;
@@ -304,24 +276,31 @@ img {
   justify-content: center;
   gap: 80px;
 }
-
+@media all and (max-width: 768px) {
+  .main__organiza {
+    gap: 40px;
+  }
+}
 .main__organiza .redes {
   font-size: 3rem;
 }
-
 .main__organiza .redes a {
   text-decoration: none;
+  color: #4267B2;
+}
+.main__organiza .redes a:active {
+  color: #4267B2;
 }
 
 .fa-instagram {
   color: transparent;
-  background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+  background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285aeb 90%);
   -webkit-background-clip: text;
-  background-clip: text;
+          background-clip: text;
 }
 
 .fa-twitter {
-  color: #00ACEE;
+  color: #00acee;
 }
 
 .fa-map-marker-alt {
@@ -336,24 +315,22 @@ img {
   grid-template-rows: 30px;
   grid-auto-rows: 100px;
 }
-
 .footer--grid h3 {
   grid-column: 1/-1;
 }
-
 @media screen and (max-width: 768px) {
   .footer--grid * {
     text-align: center;
     background-position: center;
   }
 }
+
 .footer {
   max-width: 1500px;
   margin: 0 auto;
   display: grid;
   grid-template-columns: 2fr repeat(3, minmax(100px, 1fr));
 }
-
 @media screen and (max-width: 768px) {
   .footer {
     grid-template-columns: 1fr;
@@ -362,7 +339,6 @@ img {
 .footer__organizan {
   border-right: 2px solid #e2e2e2;
 }
-
 @media screen and (max-width: 768px) {
   .footer__organizan {
     border-right: none;
@@ -373,24 +349,20 @@ img {
   background-repeat: no-repeat;
   background-size: contain;
 }
-
 .footer__organizan--ponce {
   background-image: url("../img/iesponce.png");
   background-repeat: no-repeat;
   background-size: contain;
 }
-
 .footer__organizan--junta {
   background-image: url("../img/junta.png");
   background-repeat: no-repeat;
   background-size: contain;
   grid-column: 1/-1;
 }
-
 .footer__gestionan {
   border-right: 2px solid #e2e2e2;
 }
-
 @media screen and (max-width: 768px) {
   .footer__gestionan {
     border-right: none;
@@ -402,18 +374,15 @@ img {
   background-size: contain;
   grid-column: 1/-1;
 }
-
 .footer__gestionan--ponce {
   background-image: url("../img/iesponce2.png");
   background-repeat: no-repeat;
   background-size: contain;
   grid-column: 1/-1;
 }
-
 .footer__colaboran {
   border-right: 2px solid #e2e2e2;
 }
-
 @media screen and (max-width: 768px) {
   .footer__colaboran {
     border-right: none;
@@ -425,14 +394,12 @@ img {
   background-size: contain;
   grid-column: 1/-1;
 }
-
 .footer__colaboran--mocaibo {
   background-image: url("../img/mocaibo.png");
   background-repeat: no-repeat;
   background-size: contain;
   grid-column: 1/-1;
 }
-
 .footer__inscripciones--qr {
   background-image: url("../img/qr.png");
   background-repeat: no-repeat;
@@ -440,7 +407,6 @@ img {
   grid-column: 1/-1;
   grid-row: 2/4;
 }
-
 .footer__alumnado {
   height: 50px;
   line-height: 50px;
@@ -450,7 +416,4 @@ img {
   border-top: 2px solid #e2e2e2;
   width: 100%;
 }
-
-/*# sourceMappingURL=styles.css.map */
-
 /*# sourceMappingURL=styles.css.map */
