fixed hamburguer menu

--- a/css/styles.css
+++ b/css/styles.css
@@ -101,6 +101,7 @@ body {
     visibility: hidden;
     transition: visibility 0s, opacity 0.5s linear;
     flex-direction: column;
+    display: none;
     height: 0;
   }
 }
